# Rust

./: README.md  main.rs
BanditBox/: Cargo.toml  README
BanditBox/src/: main.rs
RustyEncoder/: Cargo.toml  README
RustyEncoder/src/: main.rs
