[package]
name = "rustyencoder"
version = "0.1.0"
authors = ["bsdbandit <bsdbandit914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4"
urlencoding = "2.1.0"
figlet-rs = "0.1.3"
base32 = "0.4.0"
colour = "0.6.0"
data-encoding = "2.3.2"
encoding = "0.2"
percent-encoding = "2.1.0"
lliw = "0.2.0"
